--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -673,6 +673,21 @@
       "\n",
       "EPOCH 32 ...\n",
       "Validation Accuracy = 0.948\n",
+      "\n",
+      "EPOCH 33 ...\n",
+      "Validation Accuracy = 0.946\n",
+      "\n",
+      "EPOCH 34 ...\n",
+      "Validation Accuracy = 0.959\n",
+      "\n",
+      "EPOCH 35 ...\n",
+      "Validation Accuracy = 0.961\n",
+      "\n",
+      "EPOCH 36 ...\n",
+      "Validation Accuracy = 0.955\n",
+      "\n",
+      "EPOCH 37 ...\n",
+      "Validation Accuracy = 0.950\n",
       "\n"
      ]
     }
